packages/core/src/commands/fetch/snapshots/alnwick_core__commands__fetch__update_feed__tests___get_existing_episodes_query.snap
---
source: packages/core/src/commands/fetch/update_feed.rs
expression: format_sql(&statement)
---
SELECT
  "episodes"."source_id",
  "episodes"."primary_key"
FROM
  "episodes"
WHERE
  "episodes"."podcast_key" = 1
