packages/core/src/commands/fetch/snapshots/alnwick_core__commands__fetch__update_feed__tests___get_podcast_key_by_slug_select.snap
---
source: packages/core/src/commands/fetch/update_feed.rs
expression: format_sql(&statement)
---
SELECT
  "podcasts"."primary_key"
FROM
  "podcasts"
WHERE
  "podcasts"."slug" = 'test-0'
