packages/core/src/commands/fetch/snapshots/alnwick_core__commands__fetch__update_feed__tests___update_episode_query.snap
---
source: packages/core/src/commands/fetch/update_feed.rs
expression: format_sql(&statement)
---
UPDATE
  "episodes"
SET
  "source_id" = '550e8400-e29b-41d4-a716-446655440000',
  "title" = 'Lorem ipsum dolor sit amet',
  "source_url" = 'https://example.com/season-1/episode-1.mp3',
  "source_file_size" = 1024,
  "source_content_type" = 'audio/mpeg',
  "published_at" = '1970-01-01 00:00:00.000000 +00:00',
  "description" = 'Aenean sit amet sem quis velit viverra vestibulum. Vivamus aliquam mattis ipsum, a dignissim elit pulvinar vitae. Aliquam neque risus, tincidunt sit amet elit quis, malesuada ultrices urna.',
  "source_duration" = NULL,
  "image" = 'https://example.com/image.jpg',
  "explicit" = NULL,
  "itunes_title" = NULL,
  "episode" = 3,
  "season" = 2,
  "kind" = 'Full'
WHERE
  "episodes"."primary_key" = 42
