packages/core/src/commands/fetch/snapshots/alnwick_core__commands__fetch__update_feed__tests___update_podcast_query.snap
---
source: packages/core/src/commands/fetch/update_feed.rs
expression: format_sql(&statement)
---
UPDATE
  "podcasts"
SET
  "feed_url" = NULL,
  "title" = 'Podcast 0',
  "description" = 'Sed ac volutpat tortor. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Suspendisse placerat leo augue, id elementum orci venenatis eu.',
  "image" = 'https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png',
  "language" = 'en-us',
  "categories" = '[]',
  "explicit" = FALSE,
  "author" = NULL,
  "link" = 'https://example.com/',
  "kind" = 'Episodic',
  "copyright" = NULL,
  "new_feed_url" = NULL,
  "generator" = NULL
WHERE
  "podcasts"."primary_key" = 1
